_generated-doc/3.0/config/quarkus-websocket-websocket-config.adoc

:summaryTableId: quarkus-websocket-websocket-config
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-websocket-websocket-config_configuration]]link:#quarkus-websocket-websocket-config_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-websocket-websocket-config_quarkus.websocket.max-frame-size]]`link:#quarkus-websocket-websocket-config_quarkus.websocket.max-frame-size[quarkus.websocket.max-frame-size]`

[.description]
--
The maximum amount of data that can be sent in a single frame. Messages larger than this must be broken up into continuation frames.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_WEBSOCKET_MAX_FRAME_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_WEBSOCKET_MAX_FRAME_SIZE+++`
endif::add-copy-button-to-env-var[]
--|int 
|`65536`


a|icon:lock[title=Fixed at build time] [[quarkus-websocket-websocket-config_quarkus.websocket.dispatch-to-worker]]`link:#quarkus-websocket-websocket-config_quarkus.websocket.dispatch-to-worker[quarkus.websocket.dispatch-to-worker]`

[.description]
--
If the websocket methods should be run in a worker thread. This allows them to run blocking tasks, however it will not be as fast as running directly in the IO thread.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_WEBSOCKET_DISPATCH_TO_WORKER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_WEBSOCKET_DISPATCH_TO_WORKER+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`

|===